fixed bug on analytics bar stuck

--- a/_sass/home/_analytics.scss
+++ b/_sass/home/_analytics.scss
@@ -31,7 +31,7 @@
     transform: rotate(-90deg) translate(0%, 100%);
     &.ggl-active {
       transform: rotate(-90deg) translate(0%, 0%);
-      transition: none;
+      //transition: none;
     }
   }
 }
